[JBWS-4363]:Enable the WSTurst cloud test

--- a/modules/testsuite/cloud-tests/k8s/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/pom.xml
@@ -16,6 +16,7 @@
         <module>images</module>
         <module>basic</module>
         <module>wsse</module>
+        <module>wstrust</module>
     </modules>
     <properties>
         <!-- TODO: Move this to the parent pom-->
