[JBWS-4363]:Fix registry

--- a/modules/testsuite/cloud-tests/k8s/wsse/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/wsse/pom.xml
@@ -50,7 +50,7 @@
                         <configuration>
                             <images>
                                 <image>
-                                    <name>registry.me:5000/jbossws-wsse-deployment:latest</name>
+                                    <name>localhost:5000/jbossws-wsse-deployment:latest</name>
                                     <build>
                                         <from>busybox</from>
                                         <assembly>
