--- a/modules/testsuite/cloud-tests/k8s/wstrust/sts/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/wstrust/sts/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>JBoss Web Services - Stack CXF Specific K8s WSTrust Test</name>
+    <name>JBoss Web Services - Stack CXF Specific K8s WSTrust STS</name>
     <artifactId>jbossws-cxf-k8s-wstrust-sts</artifactId>
     <packaging>war</packaging>
 
