Intital commit for the cloud test based on Arq cube

--- a/modules/testsuite/cloud-tests/k8s/common/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/common/pom.xml
@@ -12,6 +12,13 @@
         <version>7.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${version.junit.jupiter}</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
         <plugin>
