--- a/modules/testsuite/cloud-tests/k8s/arqcube/pom.xml
+++ b/modules/testsuite/cloud-tests/k8s/arqcube/pom.xml
@@ -40,7 +40,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <build>
+        <testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
