Initial change to remove the custom resource filter

--- a/modules/testsuite/pom.xml
+++ b/modules/testsuite/pom.xml
@@ -179,6 +179,75 @@
     </testResources>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>calculate-sum</id>
+            <phase>initialize</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <exportAntProperties>true</exportAntProperties>
+
+              <target>
+                <taskdef resource="net/sf/antcontrib/antcontrib.properties"/>
+                <math result="add_int_port-offset.cxf-tests.jboss_8080" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jboss}" operand2="8080" />
+                <math result="add_int_port-offset.cxf-tests.jboss_8443" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jboss}" operand2="8443" />
+                <math result="add_int_port-offset.cxf-tests.jboss_9990" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jboss}" operand2="9990" />
+                <math result="add_int_port-offset.cxf-tests.jboss_8787" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jboss}" operand2="8787" />
+
+                <math result="add_int_port-offset.cxf-tests.ssl-mutual-auth_8080" datatype="int" operation="+" operand1="${port-offset.cxf-tests.ssl-mutual-auth}" operand2="8080" />
+                <math result="add_int_port-offset.cxf-tests.ssl-mutual-auth_8443" datatype="int" operation="+" operand1="${port-offset.cxf-tests.ssl-mutual-auth}" operand2="8443" />
+                <math result="add_int_port-offset.cxf-tests.ssl-mutual-auth_9990" datatype="int" operation="+" operand1="${port-offset.cxf-tests.ssl-mutual-auth}" operand2="9990" />
+                <math result="add_int_port-offset.cxf-tests.ssl-mutual-auth_8787" datatype="int" operation="+" operand1="${port-offset.cxf-tests.ssl-mutual-auth}" operand2="8787" />
+
+
+                <math result="add_int_port-offset.cxf-tests.default-config-tests_9990" datatype="int" operation="+" operand1="${port-offset.cxf-tests.default-config-tests}" operand2="9990" />
+                <math result="add_int_port-offset.cxf-tests.default-config-tests_8787" datatype="int" operation="+" operand1="${port-offset.cxf-tests.default-config-tests}" operand2="8787" />
+
+                <math result="add_int_port-offset.cxf-tests.jms_8080" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jms}" operand2="8080" />
+                <math result="add_int_port-offset.cxf-tests.jms_9990" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jms}" operand2="9990" />
+                <math result="add_int_port-offset.cxf-tests.jms_8787" datatype="int" operation="+" operand1="${port-offset.cxf-tests.jms}" operand2="8787" />
+
+
+                <math result="add_int_port-offset.shared-tests.jboss_8080" datatype="int" operation="+" operand1="${port-offset.shared-tests.jboss}" operand2="8080" />
+                <math result="add_int_port-offset.shared-tests.jboss_8443" datatype="int" operation="+" operand1="${port-offset.shared-tests.jboss}" operand2="8443" />
+                <math result="add_int_port-offset.shared-tests.jboss_9990" datatype="int" operation="+" operand1="${port-offset.shared-tests.jboss}" operand2="9990" />
+                <math result="add_int_port-offset.shared-tests.jboss_8787" datatype="int" operation="+" operand1="${port-offset.shared-tests.jboss}" operand2="8787" />
+
+
+                <math result="add_int_port-offset.shared-tests.default-config-tests_8080" datatype="int" operation="+" operand1="${port-offset.shared-tests.default-config-tests}" operand2="8080" />
+                <math result="add_int_port-offset.shared-tests.default-config-tests_8443" datatype="int" operation="+" operand1="${port-offset.shared-tests.default-config-tests}" operand2="8443" />
+                <math result="add_int_port-offset.shared-tests.default-config-tests_9990" datatype="int" operation="+" operand1="${port-offset.shared-tests.default-config-tests}" operand2="9990" />
+                <math result="add_int_port-offset.shared-tests.default-config-tests_8787" datatype="int" operation="+" operand1="${port-offset.shared-tests.default-config-tests}" operand2="8787" />
+
+
+                <math result="add_int_port-offset.shared-tests.address-rewrite_8080" datatype="int" operation="+" operand1="${port-offset.shared-tests.address-rewrite}" operand2="8080" />
+                <math result="add_int_port-offset.shared-tests.address-rewrite_8443" datatype="int" operation="+" operand1="${port-offset.shared-tests.address-rewrite}" operand2="8443" />
+                <math result="add_int_port-offset.shared-tests.address-rewrite_9990" datatype="int" operation="+" operand1="${port-offset.shared-tests.address-rewrite}" operand2="9990" />
+                <math result="add_int_port-offset.shared-tests.address-rewrite_8787" datatype="int" operation="+" operand1="${port-offset.shared-tests.address-rewrite}" operand2="8787" />
+              </target>
+            </configuration>
+          </execution>
+        </executions>
+        <dependencies>
+          <!-- Include the Ant-Contrib dependency in the Maven Ant Run Plugin's classpath -->
+          <dependency>
+            <groupId>ant-contrib</groupId>
+            <artifactId>ant-contrib</artifactId>
+            <version>1.0b3</version>
+            <exclusions>
+              <exclusion>
+                <artifactId>ant</artifactId>
+                <groupId>ant</groupId>
+              </exclusion>
+            </exclusions>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>${exec.plugin.version}</version>
